--- a/backend/.env-template
+++ b/backend/.env-template
@@ -1,14 +1,4 @@
-YOUR_DEPLOYMENT_NAME_4O=
-YOUR_DEPLOYMENT_NAME=
-AZURE_OPENAI_API_KEY=
-AZURE_OPENAI_ENDPOINT=
-OPENAI_API_VERSION=
-
-MONGODB_CONNECTION_STRING=
-DB_NAME=
-
-EMBEDDING_MODEL=
-
+# Azure AI Video Indexer
 ACCOUNT_NAME=
 RESOURCE_GROUP=
 SUBSCRIPTION_ID=
@@ -16,4 +6,15 @@ API_VERSION=
 API_ENDPOINT=
 AZURE_RESOURCE_MANAGER=
 
-SECRET_KEY=
+# Azure OpenAI
+YOUR_DEPLOYMENT_NAME_4O=
+YOUR_DEPLOYMENT_NAME=
+AZURE_OPENAI_API_KEY=
+AZURE_OPENAI_ENDPOINT=
+OPENAI_API_VERSION=
+EMBEDDING_MODEL=
+
+# Azure Cosmos DB for MongoDB (vCore)
+MONGODB_CONNECTION_STRING=
+DB_NAME= 
+
