--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,7 @@
     "framer-motion": "^12.4.7",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
-    "next": "^15.1.7",
+    "next": "^15.5.7",
     "next-themes": "^0.4.6",
     "primereact": "^10.9.2",
     "query-string": "^9.1.1",
@@ -53,7 +53,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "20.17.47",
-    "@types/react": "19.1.4",
+    "@types/react": "^19.2.0",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
